--- a/theme/cube/_includes/posts.html
+++ b/theme/cube/_includes/posts.html
@@ -2,7 +2,7 @@
 <article>
 	{% if blog.images %}
 	<div class="look" style="background-image: url('{{ blog.images.0 }}');">
-		<a href="{{ blog.siteURL }}" title="{{ blog.title }}"><!-- {{ blog.title }} --></a>
+		<a href="{{ blog.siteURL }}" title="{{ blog.title }}"></a>
 	</div>
 	{% endif %}
 
