--- a/theme/cube/_includes/header.html
+++ b/theme/cube/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="light" style="background-image: url('http://pingodata.qiniudn.com/cube-header.jpg');">
+<header class="light" style="background-image: url('{{site.url}}blog/img/logo.jpg');">
     <div class="intro">
         <h1>{{ site.title }}</h1>
         <p>{{ site.description  }}</p>
-		{% set headUrl = "{{site.url}blog/img/logo_128x128.png" %}
+		{% set headUrl = site.url ~ "blog/img/logo_128x128.png" %}
     	{% if site.author.avatar %}
     		{% set headUrl = site.author.avatar %}
     	{% endif %}
