--- a/theme/cube/css/style.css
+++ b/theme/cube/css/style.css
@@ -171,7 +171,7 @@ header .intro {
 
 header h1,
 header p {
-    color: #ffffff;
+    color: #000000;
     text-shadow: 0 1px 3px rgba(0,0,0,0.3);
 }
 
