--- a/theme/cube/_includes/head.html
+++ b/theme/cube/_includes/head.html
@@ -9,7 +9,14 @@
 	<link rel="stylesheet" href="{{ site.url }}theme/cube/css/style-mobile.css?ver={{ site.version }}">
 	<link rel="stylesheet" href="{{ site.url }}theme/cube/css/main.css?ver={{ site.version }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}feed.xml" />
-    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" type="text/css">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}favicon-16x16.png">
+	<link rel="manifest" href="{{ site.url }}site.webmanifest">
+	<link rel="mask-icon" href="{{ site.url }}safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" type="text/css">
     <script type="text/javascript">
 		(function(c,l,a,r,i,t,y){
 			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
