--- a/theme/cube/_includes/head.html
+++ b/theme/cube/_includes/head.html
@@ -15,6 +15,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}favicon-16x16.png">
 	<link rel="manifest" href="{{ site.url }}site.webmanifest">
 	<link rel="mask-icon" href="{{ site.url }}safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="canonical" href="{{ site.url }}">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" type="text/css">
